--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: lts/*
 
-      - run: npx bun i
+      - run: npx pnpm i
 
       - name: Update sponsors
         run: npm run build
